# SSFEM-Coanda-Effect

./: CMakeLists.txt  README.md  requirements.txt
include/: boundary_conditions.hpp  utils.hpp
mesh/: mesh.geo  mesh025o08.msh  mesh02o07.msh  mesh03.msh  mesh035.msh  mesh03o08.msh  mesh04.msh  mesh04o08.msh  mesh05.msh  mesh06.msh  mesh08.msh  mesh1.msh  mesh12.msh  mesh12o08.msh  mesh18.msh  mesh2.msh
serial/: CMakeLists.txt  README.md  assemble_mat.py  coanda_ssfem.prm  coanda_ssfem_serial.cpp
source/: coanda.cpp
